# inz-oprogramowania

./: .gitignore  CMakelist.txt  README.md  main.cpp
VPPRojects/: Gabinety lekarskie.vpp  Gabinety lekarskie.vpp.bak_000f  Gabinety lekarskie.vpp.bak_001d  Gabinety lekarskie.vpp.bak_002d
panel/: panelLekarza.cpp  panelLekarza.h  panelPacjenta.cpp  panelPacjenta.h  panelRecepcjonistki.cpp  panelRecepcjonistki.h
src/: CMakeLists.txt  KartaPacjenta.cpp  KartaPacjenta.h  Lekarz.cpp  Lekarz.h  Pacjent.cpp  Pacjent.h  Recepcjonistka.cpp  Recepcjonistka.h  Recepta.cpp  Recepta.h  Skierowanie.cpp  Skierowanie.h  Termin.cpp  Termin.h  Wizyta.cpp  Wizyta.h  helpers.cpp  helpers.h
